# orbis_encoder

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: position.rs  position_continuous.rs
src/: async_serial.rs  counter_type.rs  error.rs  lib.rs
src/async_serial/: command.rs  port.rs  programming_command.rs  response.rs
src/async_serial/response/: position_and_status.rs  self_calibration_status.rs  serial_number.rs
src/async_serial/response/position_and_status/: position.rs  position_and_detailed_status.rs  position_and_temperature.rs  short_position.rs
