[package]
name = "orbis_encoder"
version = "0.1.0"
authors = ["Akihiko Miyadera <miyadera@smilerobotics.com>"]
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
serialport = "4.0.1"
thiserror = "1.0"

[dev-dependencies]
assert_approx_eq = "1.1"
